new_smv_to_ltsmin/src/main/java/smv/smvParser.java
// Generated from C:/Users/ztb/IdeaProjects/new_smv_to_ltsmin/src\smv.g4 by ANTLR 4.8
package smv;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class smvParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, T__15=16, T__16=17, 
		T__17=18, T__18=19, T__19=20, T__20=21, T__21=22, T__22=23, T__23=24, 
		T__24=25, T__25=26, T__26=27, T__27=28, T__28=29, T__29=30, T__30=31, 
		T__31=32, T__32=33, T__33=34, T__34=35, T__35=36, T__36=37, T__37=38, 
		T__38=39, T__39=40, T__40=41, T__41=42, T__42=43, T__43=44, T__44=45, 
		T__45=46, T__46=47, T__47=48, T__48=49, T__49=50, T__50=51, T__51=52, 
		T__52=53, T__53=54, T__54=55, INTEGER=56, IDENTIFIER=57, IDENTIFIER_FIRST_CHARACTER=58, 
		IDENTIFIER_CONSECUTIVE_CHARACTER=59, DIGHT=60, ZHUSHI=61, IGNORE=62;
	public static final int
		RULE_file = 0, RULE_module = 1, RULE_para_list = 2, RULE_para = 3, RULE_module_body = 4, 
		RULE_module_element = 5, RULE_fairness_constraint = 6, RULE_invar_constraint = 7, 
		RULE_init_constraint = 8, RULE_trans_constraint = 9, RULE_assign_constraint = 10, 
		RULE_assign_list = 11, RULE_assign = 12, RULE_init_assign = 13, RULE_next_assign = 14, 
		RULE_constants_declaration = 15, RULE_constants_body = 16, RULE_frozenvar_declaration = 17, 
		RULE_var_declaration = 18, RULE_ivar_declaration = 19, RULE_var_list = 20, 
		RULE_simple_var_list = 21, RULE_var = 22, RULE_type_sepcifier = 23, RULE_simple_type_specifier = 24, 
		RULE_enumeration_type_body = 25, RULE_enumeration_type_value = 26, RULE_integer_range = 27, 
		RULE_symbolic_constant = 28, RULE_module_type_specifier = 29, RULE_define_declaration = 30, 
		RULE_define_body = 31, RULE_basic_next_expr = 32, RULE_set_next_body = 33, 
		RULE_case_expr = 34, RULE_case_next_body = 35, RULE_case_cond = 36, RULE_case_value = 37, 
		RULE_mul = 38, RULE_mod = 39, RULE_add = 40, RULE_shift = 41, RULE_union = 42, 
		RULE_logicjudge = 43, RULE_logicand = 44, RULE_logicor = 45;
	private static String[] makeRuleNames() {
		return new String[] {
			"file", "module", "para_list", "para", "module_body", "module_element", 
			"fairness_constraint", "invar_constraint", "init_constraint", "trans_constraint", 
			"assign_constraint", "assign_list", "assign", "init_assign", "next_assign", 
			"constants_declaration", "constants_body", "frozenvar_declaration", "var_declaration", 
			"ivar_declaration", "var_list", "simple_var_list", "var", "type_sepcifier", 
			"simple_type_specifier", "enumeration_type_body", "enumeration_type_value", 
			"integer_range", "symbolic_constant", "module_type_specifier", "define_declaration", 
			"define_body", "basic_next_expr", "set_next_body", "case_expr", "case_next_body", 
			"case_cond", "case_value", "mul", "mod", "add", "shift", "union", "logicjudge", 
			"logicand", "logicor"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'MODULE'", "'('", "')'", "','", "'FAIRNESS'", "';'", "'INVAR'", 
			"'INIT'", "'TRANS'", "'ASSIGN'", "':='", "'init('", "'next('", "'CONSTANTS'", 
			"'FROZENVAR'", "'VAR'", "'IVAR'", "':'", "'['", "']'", "'.'", "'boolean'", 
			"'{'", "'}'", "'array'", "'of'", "'..'", "'process'", "'DEFINE'", "'!'", 
			"'?'", "'<->'", "'->'", "'bool('", "'toint('", "'in'", "'case'", "'esac'", 
			"'*'", "'/'", "'mod'", "'+'", "'-'", "'<<'", "'>>'", "'union'", "'='", 
			"'!='", "'>'", "'<'", "'>='", "'<='", "'&'", "'|'", "'xor'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, "INTEGER", "IDENTIFIER", 
			"IDENTIFIER_FIRST_CHARACTER", "IDENTIFIER_CONSECUTIVE_CHARACTER", "DIGHT", 
			"ZHUSHI", "IGNORE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "smv.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public smvParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class FileContext extends ParserRuleContext {
		public List<ModuleContext> module() {
			return getRuleContexts(ModuleContext.class);
		}
		public ModuleContext module(int i) {
			return getRuleContext(ModuleContext.class,i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof smvListener ) ((smvListener)listener).enterFile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof smvListener ) ((smvListener)listener).exitFile(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof smvVisitor ) return ((smvVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==T__0) {
				{
				{
				setState(92);
				module();
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModuleContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(smvParser.IDENTIFIER, 0); }
		public Module_bodyContext module_body() {
			return getRuleContext(Module_bodyContext.class,0);
		}
		public Para_listContext para_list() {
			return getRuleContext(Para_listContext.class,0);
		}
		public ModuleContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof smvListener ) ((smvListener)listener).enterModule(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof smvListener ) ((smvListener)listener).exitModule(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof smvVisitor ) return ((smvVisitor<? extends T>)visitor).visitModule(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ModuleContext module() throws RecognitionException {
		ModuleContext _localctx = new ModuleContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_module);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			match(T__0);
			setState(99);
			match(IDENTIFIER);
			setState(104);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==T__1) {
				{
				setState(100);
				match(T__1);
				setState(101);
				para_list(0);
				setState(102);
				match(T__2);
				}
			}

			setState(106);
			module_body(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Para_listContext extends ParserRuleContext {
		public ParaContext para() {
			return getRuleContext(ParaContext.class,0);
		}
		public Para_listContext para_list() {
			return getRuleContext(Para_listContext.class,0);
		}
		public Para_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_para_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof smvListener ) ((smvListener)listener).enterPara_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof smvListener ) ((smvListener)listener).exitPara_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof smvVisitor ) return ((smvVisitor<? extends T>)visitor).visitPara_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Para_listContext para_list() throws RecognitionException {
		return para_list(0);
	}

	private Para_listContext para_list(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Para_listContext _localctx = new Para_listContext(_ctx, _parentState);
		Para_listContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_para_list, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(109);
			para();
			}
			_ctx.stop = _input.LT(-1);
			setState(116);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Para_listContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_para_list);
					setState(111);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(112);
					match(T__3);
					setState(113);
					para();
					}
					} 
				}
				setState(118);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class ParaContext extends ParserRuleContext {
		public Basic_next_exprContext basic_next_expr() {
			return getRuleContext(Basic_next_exprContext.class,0);
		}
		public ParaContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_para; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof smvListener ) ((smvListener)listener).enterPara(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof smvListener ) ((smvListener)listener).exitPara(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof smvVisitor ) return ((smvVisitor<? extends T>)visitor).visitPara(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ParaContext para() throws RecognitionException {
		ParaContext _localctx = new ParaContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_para);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(119);
			basic_next_expr(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Module_bodyContext extends ParserRuleContext {
		public Module_elementContext module_element() {
			return getRuleContext(Module_elementContext.class,0);
		}
		public Module_bodyContext module_body() {
			return getRuleContext(Module_bodyContext.class,0);
		}
		public Module_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof smvListener ) ((smvListener)listener).enterModule_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof smvListener ) ((smvListener)listener).exitModule_body(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof smvVisitor ) return ((smvVisitor<? extends T>)visitor).visitModule_body(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Module_bodyContext module_body() throws RecognitionException {
		return module_body(0);
	}

	private Module_bodyContext module_body(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Module_bodyContext _localctx = new Module_bodyContext(_ctx, _parentState);
		Module_bodyContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_module_body, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(122);
			module_element();
			}
			_ctx.stop = _input.LT(-1);
			setState(128);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Module_bodyContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_module_body);
					setState(124);
					if (!(precpred(_ctx, 1))) throw new FailedPredicateException(this, "precpred(_ctx, 1)");
					setState(125);
					module_element();
					}
					} 
				}
				setState(130);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Module_elementContext extends ParserRuleContext {
		public Var_declarationContext var_declaration() {
			return getRuleContext(Var_declarationContext.class,0);
		}
		public Ivar_declarationContext ivar_declaration() {
			return getRuleContext(Ivar_declarationContext.class,0);
		}
		public Frozenvar_declarationContext frozenvar_declaration() {
			return getRuleContext(Frozenvar_declarationContext.class,0);
		}
		public Define_declarationContext define_declaration() {
			return getRuleContext(Define_declarationContext.class,0);
		}
		public Constants_declarationContext constants_declaration() {
			return getRuleContext(Constants_declarationContext.class,0);
		}
		public Assign_constraintContext assign_constraint() {
			return getRuleContext(Assign_constraintContext.class,0);
		}
		public Trans_constraintContext trans_constraint() {
			return getRuleContext(Trans_constraintContext.class,0);
		}
		public Init_constraintContext init_constraint() {
			return getRuleContext(Init_constraintContext.class,0);
		}
		public Invar_constraintContext invar_constraint() {
			return getRuleContext(Invar_constraintContext.class,0);
		}
		public Fairness_constraintContext fairness_constraint() {
			return getRuleContext(Fairness_constraintContext.class,0);
		}
		public Module_elementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_module_element; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof smvListener ) ((smvListener)listener).enterModule_element(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof smvListener ) ((smvListener)listener).exitModule_element(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof smvVisitor ) return ((smvVisitor<? extends T>)visitor).visitModule_element(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Module_elementContext module_element() throws RecognitionException {
		Module_elementContext _localctx = new Module_elementContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_module_element);
		try {
			setState(141);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__15:
				enterOuterAlt(_localctx, 1);
				{
				setState(131);
				var_declaration();
				}
				break;
			case T__16:
				enterOuterAlt(_localctx, 2);
				{
				setState(132);
				ivar_declaration();
				}
				break;
			case T__14:
				enterOuterAlt(_localctx, 3);
				{
				setState(133);
				frozenvar_declaration();
				}
				break;
			case T__28:
				enterOuterAlt(_localctx, 4);
				{
				setState(134);
				define_declaration();
				}
				break;
			case T__13:
				enterOuterAlt(_localctx, 5);
				{
				setState(135);
				constants_declaration();
				}
				break;
			case T__9:
				enterOuterAlt(_localctx, 6);
				{
				setState(136);
				assign_constraint();
				}
				break;
			case T__8:
				enterOuterAlt(_localctx, 7);
				{
				setState(137);
				trans_constraint();
				}
				break;
			case T__7:
				enterOuterAlt(_localctx, 8);
				{
				setState(138);
				init_constraint();
				}
				break;
			case T__6:
				enterOuterAlt(_localctx, 9);
				{
				setState(139);
				invar_constraint();
				}
				break;
			case T__4:
				enterOuterAlt(_localctx, 10);
				{
				setState(140);
				fairness_constraint();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Fairness_constraintContext extends ParserRuleContext {
		public Basic_next_exprContext basic_next_expr() {
			return getRuleContext(Basic_next_exprContext.class,0);
		}
		public Fairness_constraintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_fairness_constraint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof smvListener ) ((smvListener)listener).enterFairness_constraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof smvListener ) ((smvListener)listener).exitFairness_constraint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof smvVisitor ) return ((smvVisitor<? extends T>)visitor).visitFairness_constraint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Fairness_constraintContext fairness_constraint() throws RecognitionException {
		Fairness_constraintContext _localctx = new Fairness_constraintContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_fairness_constraint);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(143);
			match(T__4);
			setState(144);
			basic_next_expr(0);
			setState(146);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(145);
				match(T__5);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Invar_constraintContext extends ParserRuleContext {
		public Basic_next_exprContext basic_next_expr() {
			return getRuleContext(Basic_next_exprContext.class,0);
		}
		public Invar_constraintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_invar_constraint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof smvListener ) ((smvListener)listener).enterInvar_constraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof smvListener ) ((smvListener)listener).exitInvar_constraint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof smvVisitor ) return ((smvVisitor<? extends T>)visitor).visitInvar_constraint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Invar_constraintContext invar_constraint() throws RecognitionException {
		Invar_constraintContext _localctx = new Invar_constraintContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_invar_constraint);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(148);
			match(T__6);
			setState(149);
			basic_next_expr(0);
			setState(151);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				{
				setState(150);
				match(T__5);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Init_constraintContext extends ParserRuleContext {
		public Basic_next_exprContext basic_next_expr() {
			return getRuleContext(Basic_next_exprContext.class,0);
		}
		public Init_constraintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_init_constraint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof smvListener ) ((smvListener)listener).enterInit_constraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof smvListener ) ((smvListener)listener).exitInit_constraint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof smvVisitor ) return ((smvVisitor<? extends T>)visitor).visitInit_constraint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Init_constraintContext init_constraint() throws RecognitionException {
		Init_constraintContext _localctx = new Init_constraintContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_init_constraint);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(153);
			match(T__7);
			setState(154);
			basic_next_expr(0);
			setState(156);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				setState(155);
				match(T__5);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Trans_constraintContext extends ParserRuleContext {
		public Basic_next_exprContext basic_next_expr() {
			return getRuleContext(Basic_next_exprContext.class,0);
		}
		public Trans_constraintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_trans_constraint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof smvListener ) ((smvListener)listener).enterTrans_constraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof smvListener ) ((smvListener)listener).exitTrans_constraint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof smvVisitor ) return ((smvVisitor<? extends T>)visitor).visitTrans_constraint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Trans_constraintContext trans_constraint() throws RecognitionException {
		Trans_constraintContext _localctx = new Trans_constraintContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_trans_constraint);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(158);
			match(T__8);
			setState(159);
			basic_next_expr(0);
			setState(161);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				{
				setState(160);
				match(T__5);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_constraintContext extends ParserRuleContext {
		public Assign_listContext assign_list() {
			return getRuleContext(Assign_listContext.class,0);
		}
		public Assign_constraintContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_constraint; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof smvListener ) ((smvListener)listener).enterAssign_constraint(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof smvListener ) ((smvListener)listener).exitAssign_constraint(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof smvVisitor ) return ((smvVisitor<? extends T>)visitor).visitAssign_constraint(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Assign_constraintContext assign_constraint() throws RecognitionException {
		Assign_constraintContext _localctx = new Assign_constraintContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_assign_constraint);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(163);
			match(T__9);
			setState(164);
			assign_list(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Assign_listContext extends ParserRuleContext {
		public AssignContext assign() {
			return getRuleContext(AssignContext.class,0);
		}
		public Assign_listContext assign_list() {
			return getRuleContext(Assign_listContext.class,0);
		}
		public Assign_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assign_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof smvListener ) ((smvListener)listener).enterAssign_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof smvListener ) ((smvListener)listener).exitAssign_list(this);
		}
		@Override
